feat(ai): add visual stability detector, Verla auto-translate checkout tests, and prompt addon enhancements